[package]
name = "flock-benchmarks"
version = "0.1.0"
authors = [ "Gang Liao <gangliao@cs.umd.edu>" ]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { git = "https://github.com/DSLAM-UMD/arrow-rs", branch = "flock", features = [ "simd" ] }
datafusion = { git = "https://github.com/DSLAM-UMD/arrow-datafusion", branch = "flock" }
driver = { path = "../src/driver" }
env_logger = "^0.9"
futures = "0.3"
itertools = "0.10.0"

lazy_static = "1.4"
log = "0.4.14"
runtime = { path = "../src/runtime" }
rusoto_core = "0.47.0"
rusoto_lambda = "0.47.0"
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.2", features = [ "macros", "io-util", "sync", "rt-multi-thread" ] }

[[bin]]
name = "nexmark_bench"
path = "nexmark/main.rs"
