[package]
name = "benchmarks"
version = "0.3.0"
authors = [ "Gang Liao <gangliao@cs.umd.edu>" ]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simd = [ "datafusion/simd" ]

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
daggy = { git = "https://github.com/flock-lab/daggy", branch = "master" }
datafusion = { git = "https://github.com/flock-lab/arrow-datafusion", branch = "flock" }
env_logger = "^0.9"
flock = { path = "../flock" }
futures = "0.3"
humantime = "2.1.0"
itertools = "0.10.0"
lazy_static = "1.4"
log = "0.4.14"
openssl = { version = "0.10.32", features = [ "vendored" ] }
reqwest = "0.11.7"
rusoto_core = { git = "https://github.com/flock-lab/rusoto", branch = "flock" }
rusoto_lambda = { git = "https://github.com/flock-lab/rusoto", branch = "flock" }
rusoto_logs = { git = "https://github.com/flock-lab/rusoto", branch = "flock" }
rusoto_s3 = { git = "https://github.com/flock-lab/rusoto", branch = "flock" }
rusoto_sqs = { git = "https://github.com/flock-lab/rusoto", branch = "flock" }
serde_json = "1.0"
structopt = { git = "https://github.com/flock-lab/structopt", branch = "master", default-features = false }
tokio = { version = "1.4", features = [ "macros", "io-util", "sync", "rt-multi-thread", "time" ] }

[[bin]]
name = "nexmark_bench"
path = "src/nexmark/main.rs"

[[bin]]
name = "ysb_bench"
path = "src/ysb/main.rs"

[[bin]]
name = "s3_bench"
path = "src/s3/main.rs"
