[package]
name = "example"
version = "0.1.0"
authors = ["Gang Liao <gangliao@cs.umd.edu>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = "1.0"
aws_lambda_events = "0.3"
base64 = "0.13"
arrow = { git = "https://github.com/apache/arrow", branch = "master" }
datafusion = { git = "https://github.com/apache/arrow", branch = "master" }

[[bin]]
name = "hello"
path = "hello.rs"

[[bin]]
name = "step_1"
path = "step_functions/hello.rs"

[[bin]]
name = "step_2"
path = "step_functions/world.rs"

[[bin]]
name = "gen_data"
path = "kinesis/gen_data.rs"

[[bin]]
name = "sql"
path = "sql/plan.rs"
