[package]
name = "example"
version = "0.1.0"
authors = ["Gang Liao <gangliao@cs.umd.edu>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.6.0", features = ["json"]}
serde_bytes = "0.11"
aws_lambda_events = "0.4"
base64 = "0.13"
more-asserts = "0.2.1"
arrow = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq" }
datafusion = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq" }
arrow-flight = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq" }
typetag = "0.1"
serde_traitobject = "0.2.7"
serde_closure = "0.3.2"
heck = "0.3.1"

[[bin]]
name = "hello"
path = "hello.rs"

[[bin]]
name = "step_1"
path = "step_functions/hello.rs"

[[bin]]
name = "step_2"
path = "step_functions/world.rs"

[[bin]]
name = "gen_data"
path = "kinesis/gen_data.rs"

[[bin]]
name = "sql"
path = "sql/plan.rs"

[[bin]]
name = "serde"
path = "sql/serde.rs"

[[bin]]
name = "mem_filter_lambda"
path = "lambda/mem_filter_lambda.rs"

[[bin]]
name = "hash_agg1_lambda"
path = "lambda/hash_agg1_lambda.rs"

[[bin]]
name = "hash_agg2_lambda"
path = "lambda/hash_agg2_lambda.rs"

[[bin]]
name = "projection_lambda"
path = "lambda/projection_lambda.rs"