[package]
name = "flock-function"
version = "0.3.0"
description = "The generic cloud functions for serverless computation."
authors = [ "Gang Liao <gangliao@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "AWS", "pre-compiled", "lambda", "S3" ]
edition = "2021"

[features]
snmalloc = [ "snmalloc-rs" ]
simd = [ "datafusion/simd" ]

[dependencies]
async-trait = "0.1.42"
aws_lambda_events = "0.6"
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
daggy = { git = "https://github.com/flock-lab/daggy", branch = "master" }
datafusion = { git = "https://github.com/flock-lab/arrow-datafusion", branch = "flock" }
env_logger = "^0.9"
flock = { path = "../flock" }
futures = "0.3.12"
hashring = { git = "https://github.com/flock-lab/hashring-rs", branch = "flock" }
itertools = "0.10.0"
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
lazy_static = "1.4"
log = "0.4.14"
mimalloc = { version = "0.1", optional = true, default-features = false }
openssl = { version = "0.10.32", features = [ "vendored" ] }
rand = { version = "0.8.3", features = [ "small_rng", "std_rng" ] }
rayon = "1.5"
rusoto_core = { git = "https://github.com/flock-lab/rusoto", branch = "flock" }
rusoto_lambda = { git = "https://github.com/flock-lab/rusoto", branch = "flock" }
rusoto_s3 = { git = "https://github.com/flock-lab/rusoto", branch = "flock" }
serde_json = "1.0"
snmalloc-rs = { version = "0.2", optional = true, features = [ "cache-friendly" ] }
text_io = "0.1.8"
tokio = { version = "1.4", features = [ "macros", "io-util", "sync", "rt-multi-thread" ] }
uuid = { version = "0.8.2", features = [ "v4" ] }

[dev-dependencies]
cargo_toml = "0.11.1"

[[bin]]
name = "flock"
path = "src/aws/main.rs"
