[package]
name = "nexmark"
version = "0.1.0"
description = "Nexmark is a benchmark suite for queries over continuous data streams."
authors = [ "Gang Liao <gangliao@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "streaming", "continuous", "benchmark" ]
edition = "2018"

[dependencies]
abomonation = "^0.7"
abomonation_derive = "0.5.0"
rand = { version = "0.8.3", features = [ "small_rng" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
