[package]
name = "flock-playground"
version = "0.2.0"
description = "The playground for testing and experimenting with some system design ideas."
authors = [ "Gang Liao <gangliao@cs.umd.edu>" ]
license = "AGPL-3.0"
keywords = [ "AWS", "pre-compiled", "lambda", "example" ]
edition = "2021"

[features]
snmalloc = [ "snmalloc-rs" ]

[dependencies]
aws_lambda_events = "0.5"
chrono = "0.4.19"
env_logger = "^0.9"
flock = { path = "../flock" }
futures = "0.3.12"
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
lazy_static = "1.4"
log = "0.4.14"
mimalloc = { version = "0.1", optional = true, default-features = false }
rayon = "1.5"
rusoto_core = "0.47.0"
rusoto_lambda = "0.47.0"
serde_json = "1.0"
snmalloc-rs = { version = "0.2", optional = true, features = [ "cache-friendly" ] }
structopt = { git = "https://github.com/flock-lab/structopt", branch = "master", default-features = false }
tokio = { version = "1.4", features = [ "macros", "io-util", "sync", "rt-multi-thread" ] }

[[bin]]
name = "flock_pg_scatter" # concurrency = 8
path = "scatter_gather_ops/scatter.rs"

[[bin]]
name = "flock_pg_gather"  # concurrency = 1
path = "scatter_gather_ops/gather.rs"

[[bin]]
name = "playground"
path = "main.rs"
