[package]
name = "flock-playground"
version = "0.3.0"
description = "The playground for testing and experimenting with some system design ideas."
authors = [ "Gang Liao <gangliao@cs.umd.edu>" ]
license = "AGPL-3.0"
keywords = [ "AWS", "pre-compiled", "lambda", "example" ]
edition = "2021"

[features]
snmalloc = [ "snmalloc-rs" ]
simd = [ "datafusion/simd" ]

[dependencies]
async-trait = "0.1.42"
aws_lambda_events = "0.6"
chrono = "0.4.19"
datafusion = { git = "https://github.com/flock-lab/arrow-datafusion", branch = "flock" }
env_logger = "^0.9"
flock = { path = "../flock" }
futures = "0.3.12"
indoc = "1.0.3"
itertools = "0.10.0"
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "main" }
lazy_static = "1.4"
log = "0.4.14"
mimalloc = { version = "0.1", optional = true, default-features = false }
rayon = "1.5"
rusoto_core = { git = "https://github.com/flock-lab/rusoto", branch = "flock" }
rusoto_lambda = { git = "https://github.com/flock-lab/rusoto", branch = "flock" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
snmalloc-rs = { version = "0.3", optional = true, features = [ "cache-friendly" ] }
structopt = { git = "https://github.com/flock-lab/structopt", branch = "master", default-features = false }
tokio = { version = "1.4", features = [ "macros", "io-util", "sync", "rt-multi-thread" ] }
typetag = "0.1.8"

[[bin]]
name = "flock_pg_scatter" # concurrency = 8
path = "src/scatter_gather_ops/scatter.rs"

[[bin]]
name = "flock_pg_gather"  # concurrency = 1
path = "src/scatter_gather_ops/gather.rs"

[[bin]]
name = "playground"
path = "src/scatter_gather_ops/main.rs"
