[package]
name = "dataflow"
version = "0.1.0"
description = "A library to generate serverless workflows that coordinate multiple AWS Lambda functions."
authors = ["Gang Liao <gangliao@cs.umd.edu>"]
license = "Apache-2.0"
keywords = ["AWS", "step-function", "workflow", "dateflow"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0"
lazy_static = "1.4.0"
log = "0.4"
serde = "1.0.117"
json = "0.12.4"

[lib]
name = "dataflow"
path = "src/step_functions/lib.rs"
crate-type = ["lib"]
