[package]
name = "scq_driver"
version = "0.1.0"
description = "A library to generate, compile and deploy lambda functions to the cloud."
authors = [ "Gang Liao <gangliao@cs.umd.edu>", "Zejun Liu <zliu1238@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "AWS", "code generation", "compilation", "build", "continuous deployment" ]
edition = "2018"

[dependencies]
aws_lambda_events = "0.4"
cargo = "0.50.0"
daggy = "0.7.0"
datafusion = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }
filetime = "0.2"
fixedbitset = "0.3.1"
glob = "0.3"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
lazy_static = "1.4"
num_cpus = "1.13.0"
regex = "1.4.3"
remove_dir_all = "0.6"
scq_lambda = { path = "../../src/lambda" }
serde_json = "1.0"
tokio = { version = "0.2", features = [ "macros" ] }
url = "2.0"

[lib]
name = "scq_driver"
path = "src/lib.rs"
crate-type = [ "lib" ]
