[package]
name = "driver"
version = "0.1.0"
description = "A library to generate, compile and deploy lambda functions to the cloud."
authors = [ "Gang Liao <gangliao@cs.umd.edu>", "Zejun Liu <zliu1238@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "AWS", "code generation", "compilation", "build", "continuous deployment" ]
edition = "2018"

[features]
build = [ "cargo", "filetime", "fixedbitset", "glob", "regex", "remove_dir_all", "url" ]

[dependencies]
arrow = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }
aws_lambda_events = "0.4"
base64 = "0.13.0"
blake2 = "0.9"
chrono = "0.4.19"
daggy = "0.7.0"
datafusion = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
lazy_static = "1.4"
query = { path = "../../src/query" }
runtime = { path = "../../src/runtime" }
rusoto_core = "0.45.0"
rusoto_iam = "0.45.0"
rusoto_lambda = "0.45.0"

# A list of all of the optional dependencies, some of which are included in the
# above `features`. They can be opted into by apps.
cargo = { version = "0.50.0", optional = true }
serde_json = "1.0"
filetime = { version = "0.2", optional = true }
fixedbitset = { version = "0.3.1", optional = true }
glob = { version = "0.3", optional = true }
num_cpus = { version = "1.13.0", optional = true }
regex = { version = "1.4.3", optional = true }
remove_dir_all = { version = "0.6", optional = true }
url = { version = "2.0", optional = true }

[dev-dependencies]
cargo_toml = "0.8.1"
tokio = { version = "1.2", features = [ "macros" ] }

[lib]
name = "driver"
path = "src/lib.rs"
crate-type = [ "lib" ]
