[package]
name = "cloud-function"
version = "0.1.0"
description = "The generic cloud functions for serverless computation."
authors = [ "Gang Liao <gangliao@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "AWS", "pre-compiled", "lambda", "S3" ]
edition = "2018"

[features]
snmalloc = [ "snmalloc-rs" ]

[dependencies]
arrow = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }

aws_lambda_events = "0.4"
daggy = "0.7.0"
datafusion = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
runtime = { path = "../runtime" }
serde_json = "1.0"
snmalloc-rs = { version = "0.2", optional = true, features = [ "cache-friendly" ] }
tokio = { version = "1.2", features = [ "macros", "io-util", "sync", "rt-multi-thread" ] }

[[bin]]
name = "scq_ops"
path = "src/ops.rs"

[[bin]]
name = "lambda"
path = "src/lambda/main.rs"
