[package]
name = "function"
version = "0.1.0"
description = "The generic cloud functions for serverless computation."
authors = [ "Gang Liao <gangliao@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "AWS", "pre-compiled", "lambda", "S3" ]
edition = "2018"

[features]
snmalloc = [ "snmalloc-rs" ]

[dependencies]
arrow = { git = "https://github.com/flock-lab/arrow-rs", branch = "flock", features = [ "simd" ] }
aws_lambda_events = "0.5"
bytes = "1.1.0"
chrono = "0.4.19"
datafusion = { git = "https://github.com/flock-lab/arrow-datafusion", branch = "flock" }
env_logger = "^0.9"
futures = "0.3.12"
itertools = "0.10.0"
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
lazy_static = "1.4"
log = "0.4.14"
mimalloc = { version = "0.1", optional = true, default-features = false }
rayon = "1.5"
runtime = { path = "../runtime" }
rusoto_core = "0.47.0"
rusoto_lambda = "0.47.0"
serde_json = "1.0"
snmalloc-rs = { version = "0.2", optional = true, features = [ "cache-friendly" ] }
tokio = { version = "1.2", features = [ "macros", "io-util", "sync", "rt-multi-thread" ] }

[dev-dependencies]
driver = { path = "../driver" }
test_utils = { path = "../test" }

# [[bin]]
# name = "aws_lambda"
# path = "src/aws/lambda.rs"

[[bin]]
name = "nexmark_lambda"
path = "src/aws/nexmark/lambda.rs"

# [[bin]]
# name = "hello"
# path = "src/aws/hello.rs"
