[package]
name = "scq_lambda"
version = "0.1.0"
description = "A library to split the physical plan and map its input/output to lambda functions."
authors = ["Gang Liao <gangliao@cs.umd.edu>", "Zejun Liu <zliu1238@cs.umd.edu>"]
license = "Apache-2.0"
keywords = ["AWS", "sql", "physical-plan", "dataflow"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0"
lazy_static = "1.4.0"
log = "0.4"
serde = "1.0.117"
json = "0.12.4"
sqlparser = "0.6.1"

[lib]
name = "scq_lambda"
path = "src/lib.rs"
crate-type = ["lib"]
