[package]
name = "query"
version = "0.1.0"
description = "A query module to unify data analytics over streams and batches."
authors = [ "Gang Liao <gangliao@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "streaming", "batch", "data analytics", "sql" ]
edition = "2018"

[dependencies]
arrow = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }
datafusion = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }
runtime = { path = "../../src/runtime" }

[lib]
name = "query"
path = "src/lib.rs"
crate-type = [ "lib" ]
