[package]
name = "runtime"
version = "0.1.0"
description = "A utility module to simplify the initialization of lambda functions."
authors = [ "Gang Liao <gangliao@cs.umd.edu>", "Zejun Liu <zliu1238@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "AWS", "sql", "physical-plan", "dataflow" ]
edition = "2018"

[dependencies]
arrow = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }
arrow-flight = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq" }
aws_lambda_events = "0.4"
bincode = "1.3.1"
datafusion = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }
json = "0.12.4"
lazy_static = "1.4"

rayon = "1.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
serde_json = "1.0"
snap = "1.0.3"
sqlparser = "0.7.0"

[dev-dependencies]
tokio = { version = "1.1", features = [ "macros" ] }

[lib]
name = "runtime"
path = "src/lib.rs"
crate-type = [ "lib" ]
