[package]
name = "runtime"
version = "0.1.0"
description = "A utility module to simplify the initialization of lambda functions."
authors = [ "Gang Liao <gangliao@cs.umd.edu>", "Zejun Liu <zliu1238@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "AWS", "sql", "physical-plan", "dataflow" ]
edition = "2018"

[dependencies]
arrow = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }
arrow-flight = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq" }
aws_lambda_events = "0.4"
base64 = "0.13.0"
datafusion = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }
json = "0.12.4"
lazy_static = "1.4"
lz4 = "1.23.1"
rayon = "1.5"
rusoto_core = "0.46.0"
rusoto_kafka = "0.46.0"
rusoto_kinesis = "0.46.0"
rusoto_lambda = "0.46.0"
rust-ini = "0.16"
serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
serde_json = "1.0"
snap = "1.0.3"
sqlparser = "0.8.0"
text_io = "0.1.8"
zstd = "0.6.0"

[dev-dependencies]
tokio = { version = "1.2", features = [ "macros", "io-util", "sync", "rt-multi-thread" ] }

[lib]
name = "runtime"
path = "src/lib.rs"
crate-type = [ "lib" ]
