[package]
name = "runtime"
version = "0.1.0"
description = "A utility module to simplify the initialization of lambda functions."
authors = [ "Gang Liao <gangliao@cs.umd.edu>", "Zejun Liu <zliu1238@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "AWS", "sql", "physical-plan", "dataflow" ]
edition = "2018"

[dependencies]
abomonation = { git = "https://github.com/TimelyDataflow/abomonation", branch = "master" }
abomonation_derive = "0.5.0"
arrow = { git = "https://github.com/DSLAM-UMD/arrow-rs", branch = "flock", features = [ "simd" ] }
arrow-flight = { git = "https://github.com/DSLAM-UMD/arrow-rs", branch = "flock" }
async-trait = "0.1.42"
aws_lambda_events = "0.4"
base64 = "0.13.0"
blake2 = "0.9"
bytes = "1.0.1"
dashmap = "4.0.2"
datafusion = { git = "https://github.com/DSLAM-UMD/arrow-datafusion", branch = "flock" }
futures = "0.3.12"
json = "0.12.4"
lazy_static = "1.4"
log = "0.4.14"
lz4 = "1.23.1"
rand = { version = "0.8.3", features = [ "small_rng" ] }
rayon = "1.5"
rusoto_core = "0.47.0"
rusoto_kafka = "0.47.0"
rusoto_kinesis = "0.47.0"
rusoto_lambda = "0.47.0"
rust-ini = "0.17"
serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
serde_json = "1.0"
snap = "1.0.3"
sqlparser = "0.12.0"
text_io = "0.1.8"
zstd = "0.9.0+zstd.1.5.0"

[dev-dependencies]
test_utils = { path = "../test" }
tokio = { version = "1.2", features = [ "macros", "io-util", "sync", "rt-multi-thread" ] }

[lib]
name = "runtime"
path = "src/lib.rs"
crate-type = [ "lib" ]
