[package]
name = "sql"
version = "0.1.0"
authors = ["Gang Liao <gangliao@cs.umd.edu>"]
license = "Apache-2.0"
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = {version = "0.6.1", features = ["json_example"]}

[lib]
name = "sql"
path = "src/lib.rs"
crate-type = ["lib"]
