[package]
name = "step-functions"
version = "0.1.0"
description = "A library to generate serverless workflows that coordinate multiple AWS Lambda functions."
authors = ["Gang Liao <gangliao@cs.umd.edu>"]
license = "Apache-2.0"
keywords = ["AWS", "step-function", "workflow", "pipeline"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0"
env_logger = "0.8.2"
lazy_static = "1.4.0"
anyhow = "1.0.34"
log = "0.4"
tempdir = "0.3.7"
chrono = "0.4.19"
serde = "1.0.117"
json = "0.12.4"

[lib]
name = "dataflow"
path = "lib.rs"
crate-type = ["lib"]
